KULRICE-5056 - deleted SearchableAttributeOld